apps/multimedia/prowlarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/part-of: prowlarr
    app.kubernetes.io/version: 1.30.2
  name: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: prowlarr
      app.kubernetes.io/part-of: prowlarr
  serviceName: prowlarr
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: prowlarr
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: prowlarr
        app.kubernetes.io/part-of: prowlarr
        app.kubernetes.io/version: 1.30.2
    spec:
      containers:
        - env:
            - name: TZ
              value: Europe/Berlin
            - name: PUID
              value: "1000"
            - name: GUID
              value: "1000"
          image: linuxserver/prowlarr:2.5.2
          imagePullPolicy: IfNotPresent
          name: prowlarr
          ports:
            - containerPort: 9696
              name: http
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 2
            tcpSocket:
              port: http
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 160m
              memory: 37Mi
          startupProbe:
            failureThreshold: 60
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: http
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
        - args:
            - prowlarr
          image: ghcr.io/onedr0p/exportarr:v2.3.0
          name: exportarr
          ports:
            - containerPort: 9709
              name: metrics
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: metrics
            periodSeconds: 10
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 1m
              memory: 11Mi
          volumeMounts:
            - mountPath: /app
              name: config
              readOnly: true
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      serviceAccountName: prowlarr
      volumes: []
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
